[gd_scene load_steps=14 format=4 uid="uid://bp2ksdyg6iv52"]

[ext_resource type="Script" uid="uid://hnb0jev4jijq" path="res://scripts/magnet_tower.gd" id="1_vv3vn"]
[ext_resource type="PackedScene" uid="uid://bb5oc1bby1ma0" path="res://objects/projectiles/ballista_projectile.tscn" id="2_7xlim"]
[ext_resource type="Texture2D" uid="uid://c0wabg7l73vjy" path="res://assets/3d/towers/magnet_magnetPallette.png" id="3_vv3vn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5einc"]
resource_name = "Material.001"
cull_mode = 2
shading_mode = 0
albedo_texture = ExtResource("3_vv3vn")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_6fbao"]
_surfaces = [{
"aabb": AABB(-1, -0.1019153, -1, 2, 1.2996316, 2),
"format": 34359742465,
"index_count": 108,
"index_data": PackedByteArray("AAAKAAIAAgAKAAMAAAABAAoAAgALAAAAAQAMAAoACgAMAA0ACgANAAMAAQAOAAwADQAMAA4ADQAOAA8AAwANAA8AEAAPAA4AAwAPABAAEAAOAAEAAgADAAgACAADABAABQAQAAEACAAQAAUABQABAAAACAARAAIAAgARAAsABQASAAgACAASABEAAAATAAUAAAALABMABQATABIABAALABEACQASABMABgATAAsABgAJABMABAAGAAsACQAHABIABwARABIABgAHAAkABwAEABEABgAEAAcA"),
"lods": [1.5927799, PackedByteArray("AAABAAIAAgABAAMABAAAAAIABQADAAEABQABAAAABAAGAAAABgAFAAAABwAEAAIABgAEAAcAAgADAAgACAADAAUABwACAAgABgAJAAUABgAHAAkACQAIAAUACQAHAAgA")],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("/r8lv2TWOj7+vyW/GdvKvsCxET8Z28q+/r8lv2TWOj7+vyU/GdvKPsCxET8Z28o+AACAv/i40L0AAIA//r8lP2TWOj7+vyW/AACAv/i40L0AAIC/AACAP/i40L0AAIA//r8lP2TWOj7+vyU/AACAP/i40L0AAIC/GdvKvsCxET8Z28o+AACAv2TWOj4AAIC/GdvKvsROmT8Z28o+GdvKPsROmT8Z28o+GdvKvsROmT8Z28q+GdvKPsROmT8Z28q+GdvKPsCxET8Z28q+AACAv2TWOj4AAIA/AACAP2TWOj4AAIA/AACAP2TWOj4AAIC/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pqvi8"]
resource_name = "magnet_Cube"
_surfaces = [{
"aabb": AABB(-1, -0.1019153, -1, 2, 1.2996316, 2),
"attribute_data": PackedByteArray("mGAzPkBPAj+YYDM+QE8CP5hgMz5ATwI/mGAzPkBPAj+YYDM+QE8CP5hgMz5ATwI/7nEiPhQoZT7ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT7ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT7ucSI+FChlPphgMz5ATwI/mGAzPkBPAj/ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT7ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT7ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT7ucSI+FChlPu5xIj4UKGU+7nEiPhQoZT4="),
"format": 34359742487,
"index_count": 108,
"index_data": PackedByteArray("AAAOAAIAAgAOAAQAAAABAA4AAgAEAAUAAwABAAAABQAEAA8AAwAPAAEABQAPAAMABgAQABEABgAJABAACAARABAACAAQAAcADAARAAgABwAQABIACQASABAABwASAAoADQAJAAYACQANABIACwAGABEADQAGAAsADAATABEACgATAAwACwARABMACgASABMADQALABMADQATABIAFAAVABYAFwAWABUAGAAWABcAGAAUABYAFwAVABkAGgAUABgAFAAbABUAGgAbABQAGQAVABsAGQAbABoA"),
"lods": [1.5927799, PackedByteArray("AAABAAIAAwABAAAAAgABAAQAAwAEAAEAAgAEAAUABQAEAAMABgAHAAgABgAJAAcACQAKAAcACwAGAAgACwAIAAwADQAJAAYADQAGAAsACQANAAoADQALAAwADQAMAAoA")],
"material": SubResource("StandardMaterial3D_5einc"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 28,
"vertex_data": PackedByteArray("/r8lv2TWOj7+vyW/GdvKvsCxET8Z28q+/r8lv2TWOj7+vyU//r8lP2TWOj7+vyW/GdvKPsCxET8Z28o+/r8lP2TWOj7+vyU/AACAP/i40L0AAIA//r8lv2TWOj7+vyU//r8lP2TWOj7+vyU/AACAv/i40L0AAIA//r8lv2TWOj7+vyW/AACAP/i40L0AAIC//r8lP2TWOj7+vyW/AACAv/i40L0AAIC/GdvKvsCxET8Z28o+GdvKPsCxET8Z28q+AACAv2TWOj4AAIA/AACAP2TWOj4AAIA/AACAv2TWOj4AAIC/AACAP2TWOj4AAIC/GdvKPsROmT8Z28o+GdvKvsROmT8Z28q+GdvKPsROmT8Z28q+GdvKPsCxET8Z28q+GdvKPsCxET8Z28o+GdvKvsCxET8Z28q+GdvKvsCxET8Z28o+GdvKvsROmT8Z28o+B2ID8f///7+OIEbQ////vwNxB+L///8/950D8f///7+4r42g////P/uOB+L///8/qqpUVf///z8DcQfi////P/uOB+L///8/VFVUVf///z8HYgPx////v1TVqir///+/950D8f///7+qKqoq////v0ZQjaD///8/cN9G0P///79VVauq////P6mqq6r///8/qypV1f///79T1VXV////v6qqqqr///8/qipU1f///79U1VTV////v3DfRtD///+/uK+NoP///z+OIEbQ////v0ZQjaD///8/VFWqqv///z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_6fbao")

[sub_resource type="ArrayMesh" id="ArrayMesh_5uuc8"]
_surfaces = [{
"aabb": AABB(-1.2135178, 1.0326213, 0, 1.9563667, 1.9233364, 0.6556644),
"format": 34359742465,
"index_count": 348,
"index_data": PackedByteArray("FgAqACsAKwAqABcAFgANACoAKwAYABYADQAsACoALQANABYAKgAsAA8AKgAPABcADQAaACwAGAAsABoALgAaAA0ALQAuAA0AEAAYABoAFgAQAC0AFgAYABAAGAAvACwALwAPACwAKwAvABgAEAAaADAALgAwABoALQAQADEAMQAQADAAGQAuAC0ALQAxABkADAAvACsAKwAXAAwAMgAwAC4AGQAyAC4AMQAwAB8AMgAfADAAGQAxAAAAAAAxAB8ACgAyABkAGQAAAAoACgADADIAAwAfADIAAAAfAAEAAwABAB8AIQAAAAEACgAAACEAMwADAAoACgAhADMAMwAgAAMAIAABAAMAIQABACIAIAAiAAEANAAhACIAMwAhADQANQAgADMAMwA0ADUANQA2ACAANgAiACAANAAiADcANgA3ACIAIwA0ADcANQA0ACMAEgA2ADUANQAjABIAEgAkADYAJAA3ADYAIwA3ABEAJAARADcAOAAjABEAEgAjADgAOQAkABIAEgA4ADkAOQA6ACQAOgARACQAOAARADsAOgA7ABEAFAA4ADsAOQA4ABQAJQA6ADkAOQAUACUAJQATADoAEwA7ADoAJQAUAAsAFAA7ACYAEwAmADsACwAUACYABAATACUAJQALAAQACQAmABMABAAJABMACwAmAAIACQACACYABAALACcAKAACAAkABAAoAAkACwACACkAKAApAAIACwApACcABAAVACgAFQApACgABAAnABUAFQAnACkADAAFAAcADAAXAAUABwAbAAwADAAbAC8ALwAbAA8AFwAPAAYAGwAGAA8AFwAGAAUABwAIABsAGwAIAAYAHQAIAAcABQAdAAcABgAIAB4AHQAeAAgABQAGABwABgAeABwABQAOAB0ADgAeAB0ABQAcAA4ADgAcAB4A"),
"lods": [0.110747285, PackedByteArray("FgAXAAwADAAXAAUAFgANABcADAAYABYAFwAGAAUADQAPABcAFwAPAAYAGQANABYADQAaAA8AGAAPABoAFgAYABAAFgAQABkAEAAYABoAGAAbAA8ADAAbABgAGwAGAA8ABwAbAAwADAAFAAcAGwAIAAYABwAIABsABQAGABwAHQAIAAcABQAdAAcABgAIAB4AHQAeAAgABgAeABwABQAOAB0ADgAeAB0ABQAcAA4ADgAcAB4AEAAaAB8ADQAfABoAAAAQAB8AGQAQAAAAAwAfAA0AGQADAA0AAwABAB8AAAAfAAEACgADABkAGQAAAAoACgAgAAMAIAABAAMACgAAACEAIQAAAAEAIAAiAAEAIQABACIAEgAgAAoACgAhABIAIAARACIAIQAiABEAIwAhABEAEgAhACMAEgAkACAAJAARACAAEgAjABQAFAAjABEAJQAkABIAEgAUACUAJQATACQAEwARACQAJQAUAAsAFAARACYAEwAmABEACwAUACYABAATACUAJQALAAQACQAmABMABAAJABMACwAmAAIACQACACYABAALACcAKAACAAkABAAoAAkACwACACkAKAApAAIACwApACcABAAVACgAFQApACgABAAnABUAFQAnACkA"), 0.5526698, PackedByteArray("DAANAAUADAAFAAcABQAOAAcABwAIAAwADgAIAAcABQAGAA4ADgAGAAgABQAPAAYACAAGAA8ADQAPAAUADAAIABAAEAAIAA8ACgANAAwADAAQAAoADQABAA8AEAAPAAEAAwABAA0ACgADAA0AAAAQAAEACgAQAAAAAwARAAEAAAABABEAEgADAAoACgAAABIAEgATAAMAEwARAAMAEgAAABQAFAAAABEABAATABIAEgAUAAQABAAJABMACQARABMABAAVAAkACQACABEAFQACAAkACwAUABEABAAUAAsACwARAAIABAALABUAFQALAAIA"), 0.9038454, PackedByteArray("BwADAAUABQAIAAcABQAGAAgAAwAGAAUABwAIAAAAAAAIAAYAAwABAAYAAAAGAAEAAwACAAEAAAABAAIACQACAAMACgADAAcACgAJAAMABwAAAAoABAACAAkABAAJAAoACwAAAAIABAALAAIACgAAAAsACgALAAQA"), 1.583752, PackedByteArray("AAABAAIAAwACAAEABAACAAMABAAAAAIAAwAAAAQAAwABAAUABQABAAAABQAAAAMABQAAAAYABQAGAAAA")],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("FaJfvyQBAEDbU9074aFfvyj8/z9huSc/l8WEvbpxJ0C5/iU/jVSbv99E/z9huSc/AL+kvWkuPUAAAACA0C3Eve8shD+5/iU/QrCivSmlrz+5/iU/0C3Eve8shD8AAACABb6ivTOlrz8AAACAAL+kvWkuPUC5/iU/jVSbv99E/z/bU9076eyEvaxxJ0AAAACA7u75vvsEiT9nj4I6G6Jnv2mkqj+p4yY/fj06P+8shD+5/iU/7K3Avkgesj8BQCY/9N9Fvz9P2z/MBZw7XcYxv/vGGUDFsSc/SQRsv6vyKUDihdk7bAH8vmLCOkD0yyY/DrjFvp4VJkAoO007WCs+P2kuPUAAAACAG6Jnv2mkqj/G72Q77u75vvsEiT8BQCY/G48tvxAPyz/G72Q7NyGWv9TH4D8o6sA7pH0tvzsHyz+p4yY/4ObAvjsjsj9nj4I6fj06Pw6yrz+5/iU/fj06P+8shD8AAACAfj06Pw6yrz8AAACAwItZv6hU7j+NgCc/fyyXv/XgDkCd2Sc/qelav1quCEDIce078Opav0etCECd2Sc/ntMxvwDEGUDihdk7SQRsv6vyKUDFsSc/bAH8vmLCOkAoO007EkbFvlEaJkD0yyY/WCs+P9prJ0AAAACAWCs+P2kuPUC5/iU/WCs+P9prJ0C5/iU/PYAmv11plj/cjiY/PYAmv11plj8SIxA7s+bvvkMvuz/cjiY/lrCHv3QAxD/MBZw7lrCHv3QAxD/FNic/keTvvuwuuz8SIxA7uthFv4xJ2z/FNic/EJFZv8Fc7j8o6sA7NyGWv9TH4D+NgCc/fyyXv/XgDkDIce07OttIv6fnEUDUcu079oqJv6VEHUDUcu079oqJv6VEHUCf2Sc/TNlIv3HoEUCf2Sc/Cpn5vpR9IUDW2a07tSYqvzEQNEDW2a07tSYqvzEQNEBtWic/BJj5vqh9IUBtWic/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_607dl"]
resource_name = "magnet_Mesh"
_surfaces = [{
"aabb": AABB(-1.2135178, 1.0326213, 0, 1.9563667, 1.9233364, 0.6556644),
"attribute_data": PackedByteArray("RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj7Ewkc+wCZgPsTCRz7AJmA+xMJHPsAmYD7Ewkc+wCZgPtCU/T3EWi0+0JT9PcRaLT7QlP09xFotPtCU/T3EWi0+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PtCU/T3EWi0+xMJHPsAmYD5oGwQ/mCs8PmgbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+0JT9PcRaLT7QlP09xFotPtCU/T3EWi0+xMJHPsAmYD7Ewkc+wCZgPsTCRz7AJmA+nOhNP/C7Kj6c6E0/8LsqPpzoTT/wuyo+nOhNP/C7Kj5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+aRsEP5grPD5pGwQ/mCs8PmkbBD+YKzw+RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+RPBkP8iOOj5E8GQ/yI46PkTwZD/Ijjo+"),
"format": 34359742487,
"index_count": 348,
"index_data": PackedByteArray("OgA7ADwAPAA7ACMAPAAjABgAOgAZADsAPAAlACIAGAA9ADwAPAA9ACUAGAAkAD0AOgAlABsACgAkABgAGAAFAAoACgAMACQAGAA+AAUAJAAMAAkAPgAJAAUAJAAJABoAPgAaAAkAPQAkABoAOwAaAD4APQAaAD8AOwA/ABoAJQA9AD8AGQA/ADsAJQA/ACYAGQAmAD8AGwAlACYAQAAmABkAGwAmAEEAQABBACYAQgBAABkAQgAZADoAOgAbAEIAQwAbAEEAQgAbAEMAKABAAEIAQgBDACgAKABEAEAARABBAEAAKABDAAYACwBEACgAKAAGAAsACwAHAEQABgBDACcAQwBBACcARAAnAEEABwAnAEQABgAnAAgABwAIACcAHABFAEYARgBFACoAHAApAEUARgAtABwAKQBHAEUARQArACoARQBHACsAKgArAAEAKgABAAMASAAqAAMARgAqAEgASAADAA0ADQAsAEgADQAAACwASABJAEYASAAsAEkASQAsACsASQArAEcARgBJAC0ALQBJAEcALQBHAB4AKQAeAEcASgAtAB4AHAAtAEoASwApABwAHABKAEsASwBMACkATAAeACkASgAeAE0ATABNAB4AHwBKAE0ASwBKAB8ALgBMAEsASwAfAC4ALgAdAEwAHQBNAEwALgAfAA8ABAAdAC4ALgAPAAQABAAOAB0ADwAfAC8AHwBNAC8AHQAvAE0ADgAvAB0ADwAvAAIADgACAC8AFAAwABYAMAAVABYAFAAgADAAMAAxABUAIAAxADAAFwAVADEAFAAyACAAFAAXADIAIAAyADEAFwAxADIAEAAzABIAMwARABIAEAAhADMAMwA0ABEAIQA0ADMAEwARADQAEAA1ACEAEAATADUAIQA1ADQAEwA0ADUANgA3ADgANgA5ADcA"),
"lods": [0.110747285, PackedByteArray("IgAjABgAGAAjAAUAGAAFAAoAIwAJAAUACgAkABgACgAMACQAJAAMAAkAGAAkACUAGAAlACIAJAAJABoAIwAaAAkAJQAkABoAIgAZACMAGQAaACMAJQAaACYAGQAmABoAGwAlACYAIgAlABsAGQAnACYAGwAmACcAKAAZACIAIgAbACgAKAAHABkABwAnABkACwAHACgABwAIACcAKAAGAAsAKAAbAAYABgAbACcABgAnAAgAHAApACoAKgABAAMAKgArAAEADQAqAAMAHAAqAA0AKgAeACsAKQAeACoALAArAB4ADQAAACwADQAsABwAHAAsAC0ALQAsAB4AHAAtAB8AHwAtAB4ALgApABwAHAAfAC4ALgAdACkAHQAeACkALgAfAA8ABAAdAC4ALgAPAAQABAAOAB0ADwAfAC8AHwAeAC8AHQAvAB4ADgAvAB0ADwAvAAIADgACAC8AFAAwABYAMAAVABYAFAAgADAAMAAxABUAIAAxADAAFwAVADEAFAAyACAAFAAXADIAIAAyADEAFwAxADIAEAAzABIAMwARABIAEAAhADMAMwA0ABEAIQA0ADMAEwARADQAEAA1ACEAEAATADUAIQA1ADQAEwA0ADUANgA3ADgANgA5ADcA"), 0.5526698, PackedByteArray("GAAZAAUAGAAFAAoACgAMABgAGQAaAAUABQAaAAkADAAJABoAGQAIABoAGwAMABoAGAAMABsAGwAaAAgABwAIABkABgAbAAgACwAHABkACwAbAAYACwAZABgAGAAbAAsAHAAdAAMAHAADAA0ADQAAABwAHQAeAAMAAwAeAAEAAAABAB4ABAAdABwAHAAAAB8AHAAfAAQAHwAAAB4ABAAOAB0ADgAeAB0ABAAfAA8ADwAfAB4ADgACAB4ADwAeAAIAFAAgABYAIAAVABYAFAAXACAAIAAXABUAEAAhABIAIQARABIAEAATACEAIQATABEA"), 0.9038454, PackedByteArray("CgAHAAUABwAJAAUACwAHAAoABwAIAAkACgAGAAsABgAJAAgACgAMAAYABgAMAAkADQAOAAMABAAOAA0ADgACAAMADQAPAAQAAwACAAEADQAAAA8ADwAAAAIAAAABAAIAEAARABIAEAATABEAFAAVABYAFAAXABUA"), 1.583752, PackedByteArray("AAABAAIAAwACAAEABAAAAAIAAwAAAAQABAACAAMABQAGAAcABwAIAAUABQAIAAYABQAGAAkABQAJAAYA")],
"material": SubResource("StandardMaterial3D_5einc"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 78,
"vertex_data": PackedByteArray("FaJfvyQBAEDbU9074aFfvyj8/z9huSc/l8WEvbpxJ0C5/iU/jVSbv99E/z9huSc/AL+kvWkuPUAAAACA0C3Eve8shD+5/iU/FaJfvyQBAEDbU907jVSbv99E/z9huSc/4aFfvyj8/z9huSc/QrCivSmlrz+5/iU/0C3Eve8shD8AAACAjVSbv99E/z/bU907Bb6ivTOlrz8AAACAjVSbv99E/z/bU907AL+kvWkuPUC5/iU/6eyEvaxxJ0AAAACAAL+kvWkuPUAAAACAl8WEvbpxJ0C5/iU/AL+kvWkuPUC5/iU/6eyEvaxxJ0AAAACA0C3Eve8shD+5/iU/Bb6ivTOlrz8AAACA0C3Eve8shD8AAACAQrCivSmlrz+5/iU/7u75vvsEiT9nj4I6G6Jnv2mkqj+p4yY/7K3Avkgesj8BQCY/9N9Fvz9P2z/MBZw7SQRsv6vyKUDihdk7bAH8vmLCOkD0yyY/XcYxv/vGGUDFsSc/DrjFvp4VJkAoO007fj06P+8shD+5/iU/WCs+P2kuPUAAAACAG6Jnv2mkqj/G72Q77u75vvsEiT8BQCY/4ObAvjsjsj9nj4I6G48tvxAPyz/G72Q7pH0tvzsHyz+p4yY/wItZv6hU7j+NgCc/NyGWv9TH4D8o6sA7SQRsv6vyKUDFsSc/fyyXv/XgDkCd2Sc/8Opav0etCECd2Sc/qelav1quCEDIce07ntMxvwDEGUDihdk7bAH8vmLCOkAoO007EkbFvlEaJkD0yyY/fj06P+8shD8AAACAfj06Pw6yrz8AAACAfj06Pw6yrz+5/iU/WCs+P2kuPUC5/iU/WCs+P9prJ0C5/iU/WCs+P9prJ0AAAACAqelav1quCEDIce074aFfvyj8/z9huSc/8Opav0etCECd2Sc/FaJfvyQBAEDbU907G6Jnv2mkqj/G72Q7PYAmv11plj/cjiY/PYAmv11plj8SIxA7keTvvuwuuz8SIxA77u75vvsEiT8BQCY/s+bvvkMvuz/cjiY/lrCHv3QAxD/FNic/uthFv4xJ2z/FNic/lrCHv3QAxD/MBZw7EJFZv8Fc7j8o6sA7NyGWv9TH4D+NgCc/9oqJv6VEHUCf2Sc/9oqJv6VEHUDUcu07TNlIv3HoEUCf2Sc/fyyXv/XgDkDIce07OttIv6fnEUDUcu07Cpn5vpR9IUDW2a07tSYqvzEQNEDW2a07tSYqvzEQNEBtWic/BJj5vqh9IUBtWic/q/7zw////79BvMyA////P02Cw0H///8/0D2yfv///z8uP9f8////vwh9jED///8/q/7zw////7/QPbJ+////P0G8zID///8/G4JIvv///z9NPyAD////v+oAbEL///+/rMER/v///7/qAGxC////v1Z9n7////8/o8HCAf///78uP9f8////v02Cw0H///8/Vn2fv////z+jwcIB////vwh9jED///8/rMER/v///79NPyAD////vxuCSL7///8/LDjGE////78/W6ZW////PzKSKq////8/z+Oo0////78OKdHa////v7FtG7n///8/iKEgW////z9Lz2YQ////v6qqVFX///8/VNVU1f///78AKRcl////v5tsekf///8/etCF7v///7+L2tze////v6ih/KT///8/PLPYkP///z8dEv83////vxdbRqn///8/F0fZkP///z+8sy5w////P1Hw4TP///+/wtotIf///791ONvs////v9GREFD///8/VNWqKv///79R1VfV////v6eqrar///8/qqqqqv///z+nqlFV////P1HVpyr///+/UfDhM////79BvMyA////P7yzLnD///8/q/7zw////78AKRcl////v5Jjc1L///8/Iy35HP///7+y0rbh////v5tsekf///8/up7WrP///z+bUUNi////P8Gsppv///8/TR3DLv///7+T7iDN////v0xIeW3///8/2VDynP///z/bHLfQ////vwut32T///8/+BAex////7+05Pks////v+rREx3///+/xy144////79OZE6u////P7Wdo1L///8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_5uuc8")

[sub_resource type="BoxShape3D" id="BoxShape3D_wugx5"]
size = Vector3(1.1711426, 2.0321655, 1.1724854)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vv3vn"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.24800551, 0.4673366, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_7xlim"]
material = SubResource("StandardMaterial3D_vv3vn")
inner_radius = 3.9
outer_radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71fe3"]
shading_mode = 0
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.67912847, 0, 0.0023653377, 1)

[sub_resource type="TorusMesh" id="TorusMesh_qafhy"]
material = SubResource("StandardMaterial3D_71fe3")
inner_radius = 3.9
outer_radius = 4.0

[node name="magnet" type="Node3D" node_paths=PackedStringArray("spawn_point", "range_display_mesh")]
script = ExtResource("1_vv3vn")
spawn_point = NodePath("")
projectile_scene = ExtResource("2_7xlim")
cooldown = 0.5
range_display_mesh = NodePath("RangeDisplayMesh")

[node name="magnet" type="Node3D" parent="."]

[node name="Cube" type="MeshInstance3D" parent="magnet"]
transform = Transform3D(0.4751745, 0, 0, 0, 0.4751745, 0, 0, 0, 0.4751745, 0.007356152, -0.0077040456, -0.026449926)
mesh = SubResource("ArrayMesh_pqvi8")
skeleton = NodePath("")

[node name="BézierCurve" type="MeshInstance3D" parent="magnet"]
transform = Transform3D(0.6980518, 0, 0, 0, 0.6980518, 0, 0, 0, 0.6980518, 0.07114157, -0.074506044, -0.25579804)
mesh = SubResource("ArrayMesh_607dl")
skeleton = NodePath("")

[node name="Selector" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Selector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02331543, 1.0169735, 0.006652832)
shape = SubResource("BoxShape3D_wugx5")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.41340876, 0.1877234, -0.45737612)
target_position = Vector3(0, -0.27, 0)

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4311236, 0.1877234, -0.45737612)
target_position = Vector3(0, -0.27, 0)

[node name="RayCast3D3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.41340876, 0.1877234, 0.46211052)
target_position = Vector3(0, -0.27, 0)

[node name="RayCast3D4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4311236, 0.1877234, 0.46211052)
target_position = Vector3(0, -0.27, 0)

[node name="Timer" type="Timer" parent="."]

[node name="RangeDisplayMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_7xlim")

[node name="RangeDisplayMeshRed" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("TorusMesh_qafhy")

[connection signal="mouse_entered" from="Selector" to="." method="_on_selector_mouse_entered"]
[connection signal="mouse_exited" from="Selector" to="." method="_on_selector_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
